# gpt-from-scratch

./: README.md  pyproject.toml
data_collection/: get_wikipedia_dataset.py
nbs/: bertviz_test.ipynb
