[tool.poetry]
name = "gpt-from-scratch"
version = "0.1.0"
description = ""
authors = ["hugomailhot <mailhot.hugo@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.10"
datasets = "^2.17.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
